--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,23 @@
-Package: huwiwidown
-Title: An RMarkdown thesis template for students at the Humboldt Universitaet zu
-  Berlin Wirtschaftswissenschaftlichen Fakultaet (School of Business and
-  Economics) using the `bookdown` package
-Version: 0.0.1
-Authors@R: person("Phi", "Nguyen", email = "phi.nguyen@outlook.com", 
-  role = c("aut", "cre"))
-Description: Using the bookdown package and LaTeX and Word thesis templates from
-  HU Berlin School of Business and Economics, this package aims to encourage
-  reproducible research using simple Markdown syntax while embedding all of the
-  R code to produce plots and analyses as well. Based on Chester Ismay's 
-  `thesisdown` package.
-Maintainer: Phi Nguyen <phi.nguyen@outlook.com>
-Depends: 
-  R (>= 3.5.1),
-  devtools,
-  dplyr,
-  ggplot2,
-  bookdown,
-  rmarkdown,
-  knitr,
-  kableExtra
+Package: uppsalaDown
+Title: An R Markdown thesis template for use at Uppsala University Department of Statistics using the bookdown package
+Version: 0.1.0
+Authors@R: c(
+    person("Patrik", "Andersson", email = "patrik.andersson@statistics.uu.se", role = c("cre", "aut")))
+Description: Write description.
+Maintainer: Patrik Andersson <patrik.andersson@statistics.uu.se>
+Depends:
+    R (>= 3.2.0)
+Imports: 
+    dplyr,
+    ggplot2,
+    bookdown,
+    knitr,
+    here
+Suggests:
+    remotes,
+    usethis
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-SystemRequirements: pandoc (>= 1.18) - http://pandoc.org
-RoxygenNote: 6.1.1
+SystemRequirements: pandoc (>= 1.18) - https://pandoc.org
+RoxygenNote: 7.1.0
